--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </main>
 
-    <footer class="footer container mt-4">
+    <footer class="footer fixed-bottom">
         <div class="container text-center">
             <p style="font-size: 0.85rem;">&copy; 2024 Todos los derechos reservados. Jacqueline Hernández.</p>
         </div>
